# mkdocs-drawio-file

./: .gitignore  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-publish.yml
example/: mkdocs.yml  test.drawio
example/docs/: index.md  test.drawio
example/docs/media/: test.drawio
example/docs/test/: test.drawio  test2.md
example/docs/test/test3/: index.md
mkdocs_drawio_file/: __init__.py  plugin.py
